--- a/css/style.css
+++ b/css/style.css
@@ -19,85 +19,71 @@
 /* ---- Base Rules ---- */
 
 body {
+  background: rgb(136, 203, 171);
 
-    background: rgb(136,203,171);
+  background: linear-gradient(
+    0deg,
+    rgba(136, 203, 171, 1) 0%,
+    rgba(0, 13, 60, 1) 100%
+  );
 
-    background: linear-gradient(0deg, rgba(136,203,171,1) 0%, rgba(0,13,60,1) 100%);
+  margin: 0;
 
-    margin: 0;
+  font-family: "Merriweather", serif;
 
-    font-family: 'Merriweather', serif;
-
-    color: #fff;
-
+  color: #fff;
 }
 
 /* Typeography General*/
 
 h1 {
+  font-family: "Fira Sans", sans-serif;
 
-    font-family: 'Fira Sans', sans-serif;
+  font-size: 3em;
 
-    font-size: 3em;
-
-    margin: 2em 1rem;
-
+  margin: 2em 1rem;
 }
 
-@media only screen and (min-width: 35em){
+@media only screen and (min-width: 35em) {
+  h1 {
+    font-size: 7em;
 
-    h1 {
-
-        font-size: 7em;
-
-        margin: 2em 4rem 1em;
-
-    }
-
+    margin: 2em 4rem 1em;
+  }
 }
 
 h2 {
+  border-bottom: 1px solid #cc1;
 
-    border-bottom: 1px solid #cc1;
+  font-family: "Oxygen", Sans-Serif;
 
-    font-family: 'Oxygen', Sans-Serif;
+  font-size: 3em;
 
-    font-size: 3em;
-
-    color: #fff;
-
+  color: #fff;
 }
 
 p {
+  line-height: 1.6em;
 
-    line-height: 1.6em;
-
-    color: #eee;
-
+  color: #eee;
 }
 
 /* ---- Layout Rules ---- */
 
 main {
-
-    margin: 10vh 1em 10vh;
-
+  margin: 10vh 1em 10vh;
 }
 
 .main-hero {
+  min-height: 40vh;
 
-    min-height: 40vh;
-
-    padding-top: 3em;
-
+  padding-top: 3em;
 }
 
 section {
+  position: relative;
 
-    position: relative;
-
-    min-height: 100vh;
-
+  min-height: 100vh;
 }
 
 /* ---- Module Rules ---- */
@@ -105,107 +91,85 @@ section {
 /* Navigation Styles*/
 
 .navbar__menu ul {
+  padding-left: 0;
 
-    padding-left: 0;
+  margin: 0;
 
-    margin: 0;
-
-    text-align: right;
-
-    
-
-    
-
-    
-
+  text-align: right;
 }
 
 .navbar__menu li {
-
-    display: inline-block;
-
-    
-
+  display: inline-block;
 }
 
 .navbar__menu .menu__link {
+  display: block;
 
-    display: block;
+  padding: 1em;
 
-    padding: 1em;
+  font-weight: bold;
 
-    font-weight: bold;
+  text-decoration: none;
 
-    text-decoration: none;
-
-    color: #000;
-
+  color: #000;
 }
 
 .navbar__menu .menu__link:hover {
+  background: #333;
 
-    background: #333;
+  color: #fff;
 
-    color: #fff;
-
-    transition: ease 0.3s all;
-
+  transition: ease 0.3s all;
 }
 
 /* Header Styles */
 
 .page__header {
+  background: #fff;
 
-    background: #fff;
+  position: fixed;
 
-    position: fixed;
+  top: 0;
 
-    top: 0;
+  width: 100%;
 
-    width: 100%;
+  z-index: 7;
 
-    z-index: 7;
-
-    border: 2px solid red;
-
+  border: 2px solid red;
 }
+.navbar__menu {
+  display: none;
+}
+#nav-drawer {
+  width: 100px;
 
-#nav-drawer{
+  height: 100px;
 
-   width: 100px;
+  position: fixed;
 
-   height: 100px;
+  top: 0;
 
-   position: absolute;
+  left: 0;
 
-   top: 0;
+  border: 1px solid blue;
 
-   left: 0;
+  z-index: 99;
 
-   border: 1px solid blue;
-
-   z-index: 5;
-
-   border-radius:50%;
-
+  border-radius: 50%;
 }
 
 /* Footer Styles */
 
 .page__footer {
+  background: #000;
 
-    background: #000;
+  padding: 3em;
 
-    padding: 3em;
-
-    color: #fff;
-
+  color: #fff;
 }
 
-.page__footer p{
-
-    color: #fff;
-
+.page__footer p {
+  color: #fff;
 }
 
 /* ---- Theme Rules ---- */
@@ -213,33 +177,25 @@ section {
 /* Landing Container Styles */
 
 .landing__container {
+  padding: 1em;
 
-    padding: 1em;
-
-    text-align: left;
-
+  text-align: left;
 }
 
-@media only screen and (min-width: 35em){
+@media only screen and (min-width: 35em) {
+  .landing__container {
+    max-width: 50em;
 
-    .landing__container {
-
-        max-width: 50em;
-
-        padding: 4em;
-
-    }
-
+    padding: 4em;
+  }
 }
 
 section:nth-of-type(even) .landing__container {
+  margin-right: 0;
 
-    margin-right: 0;
+  margin-left: auto;
 
-    margin-left: auto;
-
-    text-align: right; 
-
+  text-align: right;
 }
 
 /* Background Circles */
@@ -249,109 +205,113 @@ section:nth-of-type(even) .landing__container {
 /* Circles appear to be random do to use of :nth-of-type psuedo class */
 
 section:nth-of-type(odd) .landing__container::before {
+  content: "";
 
-    content: '';
+  background: rgba(255, 255, 255, 0.187);
 
-    background: rgba(255, 255, 255, 0.187);
+  position: absolute;
 
-    position: absolute;
+  z-index: -5;
 
-    z-index: -5;
+  width: 20vh;
 
-    width: 20vh;
+  height: 20vh;
 
-    height: 20vh;
+  border-radius: 50%;
 
-    border-radius: 50%;
+  opacity: 0;
 
-    opacity: 0;
-
-    transition: ease 0.5s all;
-
+  transition: ease 0.5s all;
 }
 
 section:nth-of-type(even) .landing__container::before {
+  content: "";
 
-    content: '';
+  background: rgb(255, 255, 255);
 
-    background: rgb(255,255,255);
+  background: linear-gradient(
+    0deg,
+    rgba(255, 255, 255, 0.1) 0%,
+    rgba(255, 255, 255, 0.2) 100%
+  );
 
-    background: linear-gradient(0deg, rgba(255,255,255,.1) 0%, rgba(255,255,255,.2) 100%);
+  position: absolute;
 
-    position: absolute;
+  top: 3em;
 
-    top: 3em;
+  right: 3em;
 
-    right: 3em;
+  z-index: -5;
 
-    z-index: -5;
+  width: 10vh;
 
-    width: 10vh;
+  height: 10vh;
 
-    height: 10vh;
+  border-radius: 50%;
 
-    border-radius: 50%;
+  opacity: 0;
 
-    opacity: 0;
-
-    transition: ease 0.5s all;
-
+  transition: ease 0.5s all;
 }
 
 section:nth-of-type(3n) .landing__container::after {
+  content: "";
 
-    content: '';
+  background: rgb(255, 255, 255);
 
-    background: rgb(255,255,255);
+  background: linear-gradient(
+    0deg,
+    rgba(255, 255, 255, 0.1) 0%,
+    rgba(255, 255, 255, 0.2) 100%
+  );
 
-    background: linear-gradient(0deg, rgba(255,255,255,.1) 0%, rgba(255,255,255,.2) 100%);
+  position: absolute;
 
-    position: absolute;
+  right: 0;
 
-    right: 0;
+  bottom: 0;
 
-    bottom: 0;
+  z-index: -5;
 
-    z-index: -5;
+  width: 10vh;
 
-    width: 10vh;
+  height: 10vh;
 
-    height: 10vh;
+  border-radius: 50%;
 
-    border-radius: 50%;
+  opacity: 0;
 
-    opacity: 0;
-
-    transition: ease 0.5s all;
-
+  transition: ease 0.5s all;
 }
 
 section:nth-of-type(3n + 1) .landing__container::after {
+  content: "";
 
-    content: '';
+  background: rgb(255, 255, 255);
 
-    background: rgb(255,255,255);
+  background: linear-gradient(
+    0deg,
+    rgba(255, 255, 255, 0.1) 0%,
+    rgba(255, 255, 255, 0.2) 100%
+  );
 
-    background: linear-gradient(0deg, rgba(255,255,255,.1) 0%, rgba(255,255,255,.2) 100%);
+  position: absolute;
 
-    position: absolute;
+  right: 20vw;
 
-    right: 20vw;
+  bottom: -5em;
 
-    bottom: -5em;
+  z-index: -5;
 
-    z-index: -5;
+  width: 15vh;
 
-    width: 15vh;
+  height: 15vh;
 
-    height: 15vh;
+  border-radius: 50%;
 
-    border-radius: 50%;
+  opacity: 0;
 
-    opacity: 0;
-
-    transition: ease 0.5s all;
-
+  transition: ease 0.5s all;
 }
 
 /* ---- Theme State Rules ---- */
@@ -361,49 +321,35 @@ section:nth-of-type(3n + 1) .landing__container::after {
 /* Note: your-active-class class is applied through javascript. You should update the class here and in the index.html to what you set in your javascript file.  */
 
 section.your-active-class {
+  background: rgb(0, 0, 0);
 
-    background: rgb(0, 0, 0);
-
-    background: linear-gradient(0deg, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0) 100%);
-
+  background: linear-gradient(
+    0deg,
+    rgba(0, 0, 0, 0.1) 0%,
+    rgba(0, 0, 0, 0) 100%
+  );
 }
 
 section.your-active-class .landing__container::before {
+  opacity: 1;
 
-    opacity: 1;
-
-    animation: rotate 4s linear 0s infinite forwards;
-
+  animation: rotate 4s linear 0s infinite forwards;
 }
 
 section.your-active-class .landing__container::after {
+  opacity: 1;
 
-    opacity: 1;
-
-    animation: rotate 5s linear 0s infinite forwards reverse;
-
+  animation: rotate 5s linear 0s infinite forwards reverse;
 }
 
 /* Section Active Styles Keyframe Animations */
 
 @keyframes rotate {
+  from {
+    transform: rotate(0deg) translate(-1em) rotate(0deg);
+  }
 
-	from {		transform: rotate(0deg)
-
-		           translate(-1em)
-
-		           rotate(0deg);
-
-	}
-
-	to {
-
-		transform: rotate(360deg)
-
-		           translate(-1em) 
-
-		           rotate(-360deg);
-
-	}
-
+  to {
+    transform: rotate(360deg) translate(-1em) rotate(-360deg);
+  }
 }
