--- a/css/style.css
+++ b/css/style.css
@@ -95,7 +95,7 @@ section {
 
   margin: 0;
 
-  text-align: right;
+  text-align: left;
 }
 
 .navbar__menu li {
@@ -135,27 +135,27 @@ section {
 
   z-index: 7;
 
-  border: 2px solid red;
 }
 .navbar__menu {
   display: none;
 }
 #nav-drawer {
-  width: 100px;
-
-  height: 100px;
+ padding: 10px;
 
   position: fixed;
 
-  top: 0;
+  top: 10px;
 
-  left: 0;
+  right: 15px;
+  
 
   border: 1px solid blue;
 
   z-index: 99;
-
-  border-radius: 50%;
+  display: grid;
+  place-items: center;
+  font-size: 2em;
+  overflow: hidden;
 }
 
 /* Footer Styles */
