--- a/css/style.css
+++ b/css/style.css
@@ -146,12 +146,14 @@ section {
  padding: 10px;
   position: fixed;
   top: 10px;
-  right: 15px;
-  
+  right: 10px;
+  min-width: 180px;
+  border: 1px solid white;
+  border-radius:10px;
   z-index: 99;
   display: grid;
   place-items: center;
-  font-size: 2em;
+  font-size: 2.1em;
   opacity: .7;
   transition: transform 250ms;
 }
@@ -185,6 +187,11 @@ section {
     max-width: 50em;
 
     padding: 4em;
+  }
+}
+@media only screen and (max-width: 500px) {
+  #nav-drawer {
+    min-width:0;
   }
 }
 
