--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@ section {
 .navbar__menu ul {
   padding-left: 0;
   margin: 0;
-  text-align: left;
+  text-align: center;
 }
 .navbar__menu li {
   display: inline-block;
