--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,10 @@ section {
   padding-left: 0;
   margin: 0;
   text-align: center;
+  white-space: nowrap;
+  overflow-x: auto;
+  overflow-y: hidden;
+  
 }
 .navbar__menu li {
   display: inline-block;
@@ -78,19 +82,22 @@ section {
   animation-duration: 240ms;
 }
 #nav-drawer {
- padding: 10px;
+ padding: 8px;
   position: fixed;
   top: 10px;
   right: 10px;
-  min-width: 180px;
+  /*min-width: 180px;*/
   border: 1px solid white;
   border-radius:10px;
   z-index: 99;
   display: grid;
   place-items: center;
-  font-size: 2.1em;
-  opacity: .7;
+  font-size: 2em;
+  opacity: .9;
   transition: transform 250ms;
+  color: white;
+  margin-left:10px;
+  
 }
 
 /* Footer Styles */
@@ -222,11 +229,11 @@ section.your-active-class .landing__container::after {
     padding: 4em;
   }
 }
-@media only screen and (max-width: 500px) {
+/*@media only screen and (max-width: 500px) {
   #nav-drawer {
     min-width:0;
   }
-}
+}*/
 @media only screen and (min-width: 35em) {
   h1 {
     font-size: 7em;
