--- a/css/style.css
+++ b/css/style.css
@@ -107,19 +107,22 @@ section {
 }
 #top-bu {
   position: fixed;
+  width: 45px;
+  height: 45px;
  display: grid;
  place-items: center;
-  font-size: 1.5em;
+  font-size: 1.8em;
   color: rgba(0, 0, 0, 0.7);
   right: 10px;
   z-index: 3;
-  bottom: 60px;
-  padding: 8px 13px;
+  bottom: 40px;
+ /* padding: 10px 15px;*/
   background-color: rgba(212, 208, 199, 0.31);
   border: none;
   outline: none;
   border-radius: 50%;
-  display: none;
+  opacity: 0;
+  transition: opacity 130ms cubic-bezier(0.7, 0, 0.84, 0);
 }
 /* Footer Styles */
 .page__footer {
