--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+/* --Handling smooth transition to anchor links-- */
+html{
+   scroll-behavior:smooth;
+}
+
 /* ---- Base Rules ---- */
 body {
   background: rgb(136, 203, 171);
