--- a/css/style.css
+++ b/css/style.css
@@ -109,6 +109,7 @@ section {
   transition: transform 250ms, top 200ms ease-out;
   color: white;
   margin-left: 10px;
+  cursor: pointer;
 }
 #top-bu {
   position: fixed;
@@ -128,6 +129,7 @@ section {
   border-radius: 50%;
   opacity: 0;
   transition: opacity 130ms cubic-bezier(0.7, 0, 0.84, 0);
+  cursor: pointer;
 }
 /* Footer Styles */
 .page__footer {
