--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,7 @@ section {
 .navbar__menu li {
   display: inline-block;
 }
+
 .navbar__menu .menu__link {
   display: block;
   padding: 1em;
@@ -73,14 +74,15 @@ section {
 .navbar__menu .menu__link:hover {
   background: #333;
   color: #fff;
-  transition: ease 0.3s all;
+  transition: ease 0.3s background,ease 0.3s color;
 }
-.navbar__menu .menu__link:active {
-  color: #25d366;
-  transition: ease 0.3s all;
-}
+
 .menu__link:first-letter {
   text-transform: capitalize;
+}
+.navbar__menu .activeS{
+    border-bottom: 3px solid #333;
+    transition: border-bottom 300ms;
 }
 /* Header Styles */
 .page__header {
